# ASN_TUTORIAL

./: README.md  Tutorial.ipynb  config  config1  config_cartpole  config_lunar_lander  config_lunar_lander_cont  config_walker  pyproject.toml  stats.pkl  winner_genome.pkl
reinforcement/cartpole/: best_network  winner_genome.pkl
reinforcement/lander/: best_network  best_network_continued  neat-checkpoint-34  winner_genome.pkl
reinforcement/lander0/: best_network  neat-checkpoint-12  neat-checkpoint-17  neat-checkpoint-19  neat-checkpoint-4  neat-checkpoint-9
reinforcement/lander1/: winner_genome_continued.pkl
reinforcement/lander_cont/: best_network  neat-checkpoint-149  winner_genome.pkl
reinforcement/lander_cont/checkpoints/: neat-checkpoint-104  neat-checkpoint-109  neat-checkpoint-114  neat-checkpoint-119  neat-checkpoint-124  neat-checkpoint-129  neat-checkpoint-134  neat-checkpoint-139  neat-checkpoint-14  neat-checkpoint-19  neat-checkpoint-24  neat-checkpoint-29  neat-checkpoint-34  neat-checkpoint-39  neat-checkpoint-4  neat-checkpoint-44  neat-checkpoint-49  neat-checkpoint-54  neat-checkpoint-59  neat-checkpoint-64  neat-checkpoint-69  neat-checkpoint-74  neat-checkpoint-79  neat-checkpoint-84  neat-checkpoint-89  neat-checkpoint-9  neat-checkpoint-94  neat-checkpoint-99
reinforcement/walker/: best_network  neat-checkpoint-197  winner_genome.pkl
