[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d>=2.3.10",
    "graphviz>=0.21",
    "gymnasium[classic-control]>=1.2.1",
    "imageio>=2.37.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "neat-python>=0.92",
    "numpy>=2.3.4",
    "pygame>=2.6.1",
    "scikit-learn>=1.7.2",
    "swig>=4.3.1.post0",
    "tqdm>=4.67.1",
]
